# nixos-dotfiles

./: configuration.nix  dwl.nix  flake.nix  home.nix  xray-config.json
cliphist-fuzzel-rich-rs/: Cargo.toml  README.md
cliphist-fuzzel-rich-rs/src/: main.rs
config/fuzzel/: fuzzel.ini
modules/: neovim.nix  xray.nix
scripts/: cliphist-fuzzel-img-smart
