[package]
name = "cliphist-fuzzel-rich"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[profile.release]
opt-level = 3 # Highest optimization level (does not affect compilation speed)
lto = "thin"#Thin LTO-balance performance and compilation speed (5-10 times faster than fat)
codegen-units = 16 # 16 code generation units-parallel compilation (10 times faster than 1)
panic = "abort"#Panic is abort
overflow-checks = false # Disable overflow checking
debug =false # Disable debugging information
debug-assertions = false # Disable debugging assertions
rpath = false
strip =true # remove symbol table
incremental = true # incremental compilation-significantly accelerate recompilation
